Fix tabs alignment again (Tablet)

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1219,7 +1219,7 @@ body.is-tablet.is-hidden-frameless {
   }
 
   .workspace .mod-root .workspace-tabs .workspace-tab-header-container {
-    padding: 6px 130px;
+    padding: 6px 130px !important;
   }
 
   .workspace-tab-header-new-tab {
